--- a/css/styles.css
+++ b/css/styles.css
@@ -84,42 +84,40 @@ body {
   text-align: center;
 }
 
-.slide {
+.slideshow-container {
+  max-width: 600px;
+  position: relative;
+  margin: auto;
+}
+
+.news {
   display: none;
+  text-align: center;
 }
 
-.fade {
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-@keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
+.active {
+  display: block;
 }
 
 .prev, .next {
   cursor: pointer;
   position: absolute;
   top: 50%;
-  width: auto;
-  padding: 16px;
-  margin-top: -22px;
-  color: white;
-  font-weight: bold;
+  transform: translateY(-50%);
   font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
+  padding: 8px;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: none;
+  outline: none;
+}
+
+.prev {
+  left: 0;
 }
 
 .next {
   right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
 }
 /* Video Background */
 .video-background {
