--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ html {
 
 body {
   font-family: 'Roboto', sans-serif;
-  background-color: #f4f4f4;
+  background-color: #000000;
 }
 .btn-login {
   background-color: #007bff;
