--- a/css/styles.css
+++ b/css/styles.css
@@ -63,7 +63,9 @@ body {
   border-radius: 0 3px 3px 0;
   user-select: none;
 }
-
+.nav-link.dropdown-toggle {
+  color: black;
+}
 .next {
   right: 0;
   border-radius: 3px 0 0 3px;
@@ -78,7 +80,7 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  color: white;
+  color: rgb(0, 0, 0);
   font-size: 20px;
   font-weight: bold;
   text-align: center;
