--- a/css/styles.css
+++ b/css/styles.css
@@ -10,8 +10,9 @@ html {
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Helvetica', sans-serif;
   background-color: #000000;
+  font-size: large;
 }
 .btn-login {
   background-color: #007bff;
@@ -70,7 +71,17 @@ body {
   right: 0;
   border-radius: 3px 0 0 3px;
 }
+.news-header h2 {
+  border: 2px solid black; /* Khung cho tiêu đề */
+  padding: 10px;
+  display: inline-block;
+  margin-bottom: 20px; /* Thêm khoảng cách giữa tiêu đề và bài viết */
+}
 
+.news-content {
+  /* Các tùy chỉnh khác cho phần nội dung */
+  margin-top: 20px;
+}
 .prev:hover, .next:hover {
   background-color: rgba(0,0,0,0.8);
 }
@@ -95,6 +106,7 @@ body {
 .news {
   display: none;
   text-align: center;
+  color: #000000;;
 }
 
 .active {
