--- a/Blog/css/main.css
+++ b/Blog/css/main.css
@@ -9,9 +9,12 @@ html{
 }
 
 body {
-    font-family: "Roboto", sans-serif;
+    font-family: "Helvetica", sans-serif;
     font-weight: 400;
     font-style: normal;
+    font-size: large;
+    color : #000000;
+    ;
   }
 
 img {
