--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ html {
 body {
   font-family: 'Helvetica', sans-serif;
   background-color: #000000;
-  font-size: large;
+  font-size: x-large;
 }
 .btn-login {
   background-color: #007bff;
@@ -202,6 +202,7 @@ header {
   border: none;
   border-radius: 0;
   padding: 0.7em;
+  font-weight: bold;
 }
 
 @media only screen and (min-width: 992px) {
